[gd_scene load_steps=3 format=3 uid="uid://dahq5qjgj5syv"]

[ext_resource type="Script" uid="uid://bcdplfc2an02v" path="res://tools/skill_tree_creator.gd" id="1_0x0x0"]
[ext_resource type="Script" uid="uid://bijqj7j1us5cx" path="res://tools/skill_tree_editor.gd" id="2_0x0x0"]

[node name="SkillTreeCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x0x0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SkillTreeNameContainer" type="HBoxContainer" parent="VBoxContainer/TopPanel"]
layout_mode = 2

[node name="SkillTreeSelectorLabel" type="Label" parent="VBoxContainer/TopPanel/SkillTreeNameContainer"]
layout_mode = 2
text = "Load Skill Tree:"

[node name="SkillTreeSelector" type="OptionButton" parent="VBoxContainer/TopPanel/SkillTreeNameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadSkillTreeBtn" type="Button" parent="VBoxContainer/TopPanel/SkillTreeNameContainer"]
layout_mode = 2
text = "Load Selected"

[node name="SkillTreeNameLabel" type="Label" parent="VBoxContainer/TopPanel/SkillTreeNameContainer"]
layout_mode = 2
text = "Skill Tree Name:"

[node name="SkillTreeNameEdit" type="LineEdit" parent="VBoxContainer/TopPanel/SkillTreeNameContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter skill tree name..."

[node name="Spacer" type="Control" parent="VBoxContainer/TopPanel/SkillTreeNameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveNewNodeBtn" type="Button" parent="VBoxContainer/TopPanel/SkillTreeNameContainer"]
layout_mode = 2
text = "Save New Skill Tree"

[node name="ControlPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ModeContainer" type="HBoxContainer" parent="VBoxContainer/ControlPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ControlPanel/ModeContainer"]
layout_mode = 2
text = "Mode:"

[node name="PlaceModeBtn" type="Button" parent="VBoxContainer/ControlPanel/ModeContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Place Nodes"

[node name="ConnectModeBtn" type="Button" parent="VBoxContainer/ControlPanel/ModeContainer"]
layout_mode = 2
toggle_mode = true
text = "Connect Nodes"

[node name="EditModeBtn" type="Button" parent="VBoxContainer/ControlPanel/ModeContainer"]
layout_mode = 2
toggle_mode = true
text = "Edit Nodes"

[node name="FilePanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveBtn" type="Button" parent="VBoxContainer/FilePanel"]
layout_mode = 2
text = "Save Skill Tree"

[node name="LoadBtn" type="Button" parent="VBoxContainer/FilePanel"]
layout_mode = 2
text = "Load Skill Tree"

[node name="ClearBtn" type="Button" parent="VBoxContainer/FilePanel"]
layout_mode = 2
text = "Clear All"

[node name="SkillTreeEditor" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_0x0x0")

[node name="NodeInfoPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/NodeInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/NodeInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Node Information"
horizontal_alignment = 1

[node name="NodeNameContainer" type="HBoxContainer" parent="VBoxContainer/NodeInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="NodeNameLabel" type="Label" parent="VBoxContainer/NodeInfoPanel/VBoxContainer/NodeNameContainer"]
layout_mode = 2
text = "Name:"

[node name="NodeNameValue" type="Label" parent="VBoxContainer/NodeInfoPanel/VBoxContainer/NodeNameContainer"]
layout_mode = 2
text = "Select a node from database"

[node name="NodeDescContainer" type="HBoxContainer" parent="VBoxContainer/NodeInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="NodeDescLabel" type="Label" parent="VBoxContainer/NodeInfoPanel/VBoxContainer/NodeDescContainer"]
layout_mode = 2
text = "Description:"

[node name="NodeDescEdit" type="TextEdit" parent="VBoxContainer/NodeInfoPanel/VBoxContainer/NodeDescContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter node description..."

[node name="NodeManagementPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/NodeManagementPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/NodeManagementPanel/VBoxContainer"]
layout_mode = 2
text = "Node Management"
horizontal_alignment = 1

[node name="DatabaseNodeContainer" type="HBoxContainer" parent="VBoxContainer/NodeManagementPanel/VBoxContainer"]
layout_mode = 2

[node name="DatabaseNodeLabel" type="Label" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/DatabaseNodeContainer"]
layout_mode = 2
text = "Database Node:"

[node name="DatabaseNodeSelect" type="OptionButton" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/DatabaseNodeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddDatabaseNodeBtn" type="Button" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/DatabaseNodeContainer"]
layout_mode = 2
text = "Add"

[node name="RefreshDatabaseBtn" type="Button" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/DatabaseNodeContainer"]
layout_mode = 2
text = "Refresh"

[node name="NodeFormContainer" type="VBoxContainer" parent="VBoxContainer/NodeManagementPanel/VBoxContainer"]
layout_mode = 2

[node name="NodeFormLabel" type="Label" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer"]
layout_mode = 2
text = "Create New Node:"
horizontal_alignment = 1

[node name="NewNodeNameContainer" type="HBoxContainer" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer"]
layout_mode = 2

[node name="NewNodeNameLabel" type="Label" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer/NewNodeNameContainer"]
layout_mode = 2
text = "Name:"

[node name="NewNodeNameValue" type="Label" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer/NewNodeNameContainer"]
layout_mode = 2
text = "Auto-generated from database"

[node name="NewNodeDescContainer" type="HBoxContainer" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer"]
layout_mode = 2

[node name="NewNodeDescLabel" type="Label" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer/NewNodeDescContainer"]
layout_mode = 2
text = "Description:"

[node name="NewNodeDescEdit" type="TextEdit" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer/NewNodeDescContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter node description..."

[node name="NewNodeTraitContainer" type="HBoxContainer" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer"]
layout_mode = 2

[node name="NewNodeTraitLabel" type="Label" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer/NewNodeTraitContainer"]
layout_mode = 2
text = "Trait:"

[node name="NewNodeTraitSelect" type="OptionButton" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer/NewNodeTraitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewNodeSkillContainer" type="HBoxContainer" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer"]
layout_mode = 2

[node name="NewNodeSkillLabel" type="Label" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer/NewNodeSkillContainer"]
layout_mode = 2
text = "Skill:"

[node name="NewNodeSkillSelect" type="OptionButton" parent="VBoxContainer/NodeManagementPanel/VBoxContainer/NodeFormContainer/NewNodeSkillContainer"]
layout_mode = 2
size_flags_horizontal = 3
